After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 760155 - Illegal character replacement when renaming may result in invalid fat folder names
Illegal character replacement when renaming may result in invalid fat folder ...
Status: RESOLVED FIXED
Product: easytag
Classification: Other
Component: general
2.4.x
Other Linux
: Normal normal
: 2.4
Assigned To: EasyTAG maintainer(s)
EasyTAG maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2016-01-05 11:56 UTC by b3nmore
Modified: 2016-01-05 16:10 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description b3nmore 2016-01-05 11:56:20 UTC
When the option "Replace illegal characters when renaming' is enabled, the file/directory rename scanner may create directories ending with a space character (e.g. folder name from 'Who are you?'). To my knowledge, such folder names (ending with a space) are not allowed with fat file systems. So in this special case the option defeats its very own purpose.
Comment 1 David King 2016-01-05 16:10:51 UTC
The specific case that you mention works fine, and is verified with automated tests, with the '?' being substituted by an underscore ('_'). It's possible that you could have a scanner option enabled which replaces underscores with spaces, which would account for the behaviour.

There are additional filename restrictions for FAT, beyond what EasyTAG does:

https://msdn.microsoft.com/en-us/library/windows/desktop/aa365247%28v=vs.85%29.aspx#naming_conventions

I added support for replacing a '.' or ' ' occurring at the end of a filename to master as commit b3504c69bb11cfd800993a443d0c1be1124c2966. I ensured that the illegal character replacement occurs after the space/underscore substitution as commit 8afecf0a6573b6db93d91fd4e87e996301c4d495. The changes will be in an upcoming 2.4.1 release. Thanks for the bug report!