Replace illegal characters at end of filename

On FAT filesystems, filenames should avoid ending with ' ' or '.':

https://msdn.microsoft.com/en-us/library/windows/desktop/aa365247%28v=vs.85%29.aspx#naming_conventions

Handle this in et_filename_prepare(), when the option to replace illegal
characters in filenames is enabled, and add new test cases.

https://bugzilla.gnome.org/show_bug.cgi?id=760155